xpe-pa-poc-terraform-aws/modules/rds/postgresdb/main.tf
data "aws_availability_zones" "available" {}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "2.77.0"

  name                 = "postgres_vpc"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_db_subnet_group" "postgres_subnet" {
  name       = "postgres_subnet"
  subnet_ids = module.vpc.public_subnets

  tags = {
    Name = "Postgres Subnet"
  }
}

resource "aws_security_group" "postgres_security_group" {
  name   = "postgres_rds"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "postgres_rds"
  }
}

resource "aws_db_parameter_group" "postgres_parameter_group" {
  name   = "postgres"
  family = "postgres13"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "postgres_instance" {
  identifier             = "postgres"
  instance_class         = "${var.db_instance_class}"
  availability_zone      = "${var.db_region}"
  allocated_storage      = 5
  engine                 = "postgres"
  engine_version         = "13.1"
  username               = "${var.db_username}"
  password               = "${var.db_password}"
  db_subnet_group_name   = aws_db_subnet_group.postgres_subnet.name
  vpc_security_group_ids = [aws_security_group.postgres_security_group.id]
  parameter_group_name   = aws_db_parameter_group.postgres_parameter_group.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}
